@@ -91,7 +91,6 @@ dnl Functions
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_FUNC_STAT
-AC_CHECK_FUNCS([nl_langinfo])
 AC_CHECK_FUNCS([setlocale])
 AC_CHECK_FUNCS([mbrlen])
 AC_CHECK_FUNCS([memset])
