@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libvoikko.la
 libvoikko_la_SOURCES = voikko_suggest.c voikko_utils.c voikko_setup.c voikko_spell.c \
-                       voikko_hyphenate.c voikko_charset.c porting.c \
+                       voikko_hyphenate.c voikko_charset.c \
                        voikko_tokenize.c sentence.c grammar.c gccache.c \
                        gcerror.c gcanalysis.c
 libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 9:0:8 @LIBLDFLAGSWIN@
