@@ -28,20 +28,35 @@ void init_gc_error(voikko_grammar_error * gc_error) {
 
 voikko_grammar_error voikko_next_grammar_error_cstr(int handle, const char * text,
                      size_t textlen, size_t startpos, int skiperrors) {
-	voikko_grammar_error e;
-	init_gc_error(&e);
-	if (text == 0 || textlen == 0) return e;
+	if (text == 0 || textlen == 0) {
+		return voikko_next_grammar_error_ucs4(handle, 0, 0, 0, 0);
+	}
+	
 	wchar_t * text_ucs4 = voikko_cstrtoucs4(text, voikko_options.encoding, textlen);
-	if (text_ucs4 == 0) return e;
+	if (text_ucs4 == 0) {
+		return voikko_next_grammar_error_ucs4(handle, 0, 0, 0, 0);
+	}
 	
 	size_t wtextlen = wcslen(text_ucs4);
+	voikko_grammar_error e = voikko_next_grammar_error_ucs4(handle, text_ucs4,
+	                         wtextlen, startpos, skiperrors);
+	free(text_ucs4);
+	
+	return e;
+}
+
+voikko_grammar_error voikko_next_grammar_error_ucs4(int handle, const wchar_t * text_ucs4,
+                     size_t wtextlen, size_t startpos, int skiperrors) {
+	voikko_grammar_error e;
+	init_gc_error(&e);
+	if (text_ucs4 == 0 || wtextlen == 0) return e;
+	
 	const voikko_grammar_error * c_error = gc_error_from_cache(handle, text_ucs4, startpos, skiperrors);
 	if (!c_error) {
 		gc_paragraph_to_cache(handle, text_ucs4, wtextlen);
 		c_error = gc_error_from_cache(handle, text_ucs4, startpos, skiperrors);
 	}
 	
-	free(text_ucs4);
 	if (!c_error) return e;
 	
 	// Return a deep copy of cached error
