@@ -87,6 +87,9 @@ VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_ucs4(int handl
 VOIKKOEXPORT enum voikko_sentence_type voikko_next_sentence_start_cstr(int handle,
              const char * text, size_t textlen, size_t * sentencelen);
 
+VOIKKOEXPORT voikko_grammar_error voikko_next_grammar_error_ucs4(int handle, const wchar_t * text,
+                     size_t textlen, size_t startpos, int skiperrors);
+
 VOIKKOEXPORT voikko_grammar_error voikko_next_grammar_error_cstr(int handle, const char * text,
                                   size_t textlen, size_t startpos, int skiperrors);
 
